[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Scripts/INVENTORY_VBoxGunsList.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/Sprites/slot2.png" type="Texture" id=2]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 29, 10 )

[node name="VBoxGunsList" type="Button"]
margin_top = 56.0
margin_right = 233.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 40 )
flat = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
type = "type1"

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -15.0
margin_right = 45.0
margin_bottom = 15.0
rect_min_size = Vector2( 90, 30 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunSlideBar" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.5
margin_top = -15.0
margin_right = 186.5
margin_bottom = 15.0
rect_min_size = Vector2( 0, 30 )
custom_constants/separation = 36
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="." to="." method="_on_VBoxGunsList_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_VBoxGunsList_focus_exited"]
